# esposito

./: .gitignore  BUILD_SUCCESS.md  CLAUDE.md  CMakeLists.txt  CYD2USB.md  EMULATOR.md  FLASHING.md  HARDWARE.md  HTTPS_FIX.md  Makefile  README.md  STATUS.md  TESTING.md  TOUCH_VALIDATION.md  a.out  analyze_boot_log.sh  bigint.c  build.sh  convert_vlw.py  hack.vlw  monitor.sh  partitions.csv  sdkconfig  sdkconfig.defaults  test_structure.sh  vlw_page_source.html
.claude/: settings.local.json
apps/: README.md
apps/calc/: README.md  app.c  manifest.cfg
apps/clock/: README.md  app.c  core_json.c  jsmn.c  jsmn.h  manifest.cfg
apps/counter/: app.c
apps/example_app/: app.c
apps/file_manager/: app.c  (+2 more)
docs/: app.c.md
fonts/: 6x10.h  6x12.h  7x13.h  8x13.h  fonts.cpp  fonts.h  hack-10.h  hack-11.h  hack-12.h  hack-13.h  hack-14.h  hack-6.h  hack-7.h  hack-8.h  hack-9.h  hack_bold-10.h  hack_bold-11.h  hack_bold-12.h  hack_bold-13.h  hack_bold-14.h  hack_bold-6.h  hack_bold-7.h  hack_bold-8.h  hack_bold-9.h  hack_bolditalic-10.h  hack_bolditalic-11.h  hack_bolditalic-12.h  hack_bolditalic-13.h  hack_bolditalic-14.h  hack_bolditalic-6.h  hack_bolditalic-7.h  hack_bolditalic-8.h  hack_bolditalic-9.h  hack_font.h  hack_italic-10.h  hack_italic-11.h  hack_italic-12.h  hack_italic-13.h  hack_italic-14.h  hack_italic-6.h  (+40 more)
main/: CMakeLists.txt  app_config.c  app_config.h  app_heap.c  app_heap.h  app_launcher.c  app_launcher.h  app_loader.c  app_loader.h  app_manifest.c  app_manifest.h  bbq20_keyboard.c  bbq20_keyboard.h  boot.cpp  boot.h  checkpoint.c  checkpoint.h  component.cmake  elf_loader.c  elf_loader.h  hardware.cpp  hardware.h  hardware_config.h  idf_component.yml  lovgfx_config.h  main.c  os_core.c  os_core.h  os_printf.c  os_printf.h  os_symtab.c  os_symtab.h  sd_card.c  sd_card.h  terminal_mode.c  terminal_mode.h  terminal_vt100.c  terminal_vt100.h  text_mode.cpp  text_mode.h  (+4 more)
scripts/: build_app.sh  build_test.sh  check_vlw_overflow.py  gen_literate.sh  gen_symtab.sh  generate_vlw_fonts.py
source_fonts/: IBM_PLEX_LICENSE.md
wokwi/: .wokwi.build.toml  README.md  diagram.json  esposito-demo.ino  wokwi-demo.sh
(+92 files in other folders)
