idf_component_register(
    SRCS "main.c"
        "app_heap.c"
        "app_config.c"
        "app_manifest.c"
        "os_core.c"
        "os_symtab.c"
        "elf_loader.c"
        "app_loader.c"
        "app_launcher.c"
        "checkpoint.c"
        "hardware.cpp"
        "boot.cpp"
        "bbq20_keyboard.c"
        "sd_card.c"
        "touchscreen.c"
        "terminal_vt100.c"
        "terminal_mode.c"
        "text_mode.cpp"
        "wifi.cpp"
        "../libs/ui/ui.c"
        "../libs/ui/ui_button.c"
        "../libs/ui/ui_list.c"
        "../libs/ui/ui_text_input.c"
        "../fonts/fonts.cpp"
    INCLUDE_DIRS "." ".." "../libs/ui" "../fonts"
    REQUIRES driver esp_app_format esp_common esp_hw_support esp_system heap log pthread xtensa spiffs esp_driver_spi cxx esp_driver_i2c esp_driver_sdspi esp_driver_uart fatfs wear_levelling esp_wifi esp_netif nvs_flash esp_event lwip esp_http_client mbedtls
)
